--- a/volei.html
+++ b/volei.html
@@ -77,7 +77,7 @@
             margin-bottom: 10px;
         }
 
-        footer{
+        footer {
             position: absolute;
             width: 100%;
             height: 6em;
@@ -87,55 +87,58 @@
             line-height: 1.5em;
         }
 
-        footer h2{
-            /* margin-bottom: 1.2; */
+        .plado{
             margin-left: 2em;
         }
-
     </style>
 </head>
 
-<body class="abertura">
+<body>
     <header>
         <a href="index.html"><button>Pagina Inicial</button></a>
     </header>
     <main>
-        <h1>Volei de Quadra!</h1>
-        <p>
-            O voleibol entrou nos Jogos Olímpicos de Paris (1924), porém como esporte demonstrativo. Foi apenas nas
-            Olimpíadas de Tóquio (1964) que ele se tornou um esporte olímpico de competição. - O país que mais ganhou
-            medalhas no voleibol masculino em Jogos Olímpicos foi a extinta União Soviética.
-        </p>
-        <div class="medalhas">
-            <h1>Voleibol Masculino:</h1>
-            <ul>
-                <li>União Soviética: 4 vezes (1964, 1968, 1980, 1988)</li>
-                <li>Brasil: 3 vezes (1992, 2004, 2016)</li>
-                <li>Estados Unidos: 3 vezes (1984, 1988, 2008)</li>
-                <li>Iugoslávia: 1 vez (2000)</li>
-                <li>Polônia: 1 vez (1976)</li>
-            </ul>
+        <div class="abertuta">
+            <h1>Volei de Quadra!</h1>
+            <p>
+                O voleibol entrou nos Jogos Olímpicos de Paris (1924), porém como esporte demonstrativo. Foi apenas nas
+                Olimpíadas de Tóquio (1964) que ele se tornou um esporte olímpico de competição. - O país que mais
+                ganhou
+                medalhas no voleibol masculino em Jogos Olímpicos foi a extinta União Soviética.
+            </p>
+            <div class="medalhas">
+                <h1>Voleibol Masculino:</h1>
+                <ul>
+                    <li>União Soviética: 4 vezes (1964, 1968, 1980, 1988)</li>
+                    <li>Brasil: 3 vezes (1992, 2004, 2016)</li>
+                    <li>Estados Unidos: 3 vezes (1984, 1988, 2008)</li>
+                    <li>Iugoslávia: 1 vez (2000)</li>
+                    <li>Polônia: 1 vez (1976)</li>
+                </ul>
 
-            <h1>Voleibol Feminino:</h1>
-            <ul>
-                <li>Rússia: 2 vezes (1964 como União Soviética, 1980 como União Soviética)</li>
-                <li>China: 3 vezes (1984, 2004, 2016)</li>
-                <li>Cuba: 3 vezes (1992, 1996, 2000)</li>
-                <li>Estados Unidos: 1 vez (2020)</li>
-                <li>Coreia do Sul: 1 vez (1976)</li>
-            </ul>
-        </div>
-</main>
-<footer>
+                <h1>Voleibol Feminino:</h1>
+                <ul>
+                    <li>Rússia: 2 vezes (1964 como União Soviética, 1980 como União Soviética)</li>
+                    <li>China: 3 vezes (1984, 2004, 2016)</li>
+                    <li>Cuba: 3 vezes (1992, 1996, 2000)</li>
+                    <li>Estados Unidos: 1 vez (2020)</li>
+                    <li>Coreia do Sul: 1 vez (1976)</li>
+                </ul>
+            </div>
 
-    <h2>Olimpíadas<i>Tec</i></h2>
-    <ul>
-        <li> <b>Desenvolvido por:</b> Lucas Balceivcz</li>
-        <li> <b> Fone: (88) 99870-7070</b></li>
-        <li> <b> Email:</b> Lucas.balcevicz@colegio.pr.gov.br</li>
-    </ul>
-</footer>
+    </main>
+    <footer>
+        <div class="plado">
+        <h2>Olimpíadas<i>Tec</i></h2>
+        <ul>
+            <li> <b>Desenvolvido por:</b> Lucas Balceivcz</li>
+            <li> <b> Fone: (88) 99870-7070</b></li>
+            <li> <b> Email:</b> Lucas.balcevicz@colegio.pr.gov.br</li>
+        </ul>
+    </div>
+    </footer>
 
+    </div>
 </body>
 
 </html>
