--- a/volei.html
+++ b/volei.html
@@ -85,6 +85,16 @@
             color: white;
             background-color: orange;
             line-height: 1.5em;
+            padding-top: 10px;
+            padding-bottom: 5px;
+        }
+
+        footer ul{
+            list-style: none;
+        }
+
+        footer li{
+            padding-left: 20px;
         }
 
         .plado{
@@ -98,7 +108,7 @@
         <a href="index.html"><button>Pagina Inicial</button></a>
     </header>
     <main>
-        <div class="abertuta">
+        <div class="abertura">
             <h1>Volei de Quadra!</h1>
             <p>
                 O voleibol entrou nos Jogos Olímpicos de Paris (1924), porém como esporte demonstrativo. Foi apenas nas
