--- a/volei.html
+++ b/volei.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,20 +9,15 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-        .letras {
-            font-family: "Poppins", sans-serif;
-            font-weight: 500;
-            font-style: normal;
-        }
-
-        body,
-        html {
+        body, html {
             height: 100%;
             margin: 0;
             display: flex;
             justify-content: center;
             align-items: center;
             background-color: #f0f0f0;
+            box-sizing: border-box;
+            font-family: "Poppins", sans-serif;
         }
 
         .abertura {
@@ -36,7 +33,6 @@
                 opacity: 0;
                 transform: scale(0.8);
             }
-
             100% {
                 opacity: 1;
                 transform: scale(1);
@@ -81,28 +77,30 @@
             position: absolute;
             width: 100%;
             height: 6em;
-            bottom: 0px;
+            bottom: 0;
             color: white;
             background-color: orange;
             line-height: 1.5em;
             padding-top: 10px;
             padding-bottom: 5px;
+            font-size: 0.9em;
         }
 
-        footer ul{
+        footer ul {
             list-style: none;
+            padding: 0;
+            margin: 0;
         }
 
-        footer li{
+        footer li {
             padding-left: 20px;
         }
 
-        .plado{
+        .plado {
             margin-left: 2em;
         }
     </style>
 </head>
-
 <body>
     <header>
         <a href="index.html"><button>Pagina Inicial</button></a>
@@ -135,20 +133,17 @@
                     <li>Coreia do Sul: 1 vez (1976)</li>
                 </ul>
             </div>
-
+        </div>
     </main>
     <footer>
         <div class="plado">
-        <h2>Olimpíadas<i>Tec</i></h2>
-        <ul>
-            <li> <b>Desenvolvido por:</b> Lucas Balceivcz</li>
-            <li> <b> Fone: (88) 99870-7070</b></li>
-            <li> <b> Email:</b> Lucas.balcevicz@colegio.pr.gov.br</li>
-        </ul>
-    </div>
+            <h2>OlimpíadasTec</h2>
+            <ul>
+                <li><b>Desenvolvido por:</b> Lucas Balceivcz</li>
+                <li><b>Fone:</b> (88) 99870-7070</li>
+                <li><b>Email:</b> Lucas.balcevicz@colegio.pr.gov.br</li>
+            </ul>
+        </div>
     </footer>
-
-    </div>
 </body>
-
 </html>
