--- a/volei.html
+++ b/volei.html
@@ -7,31 +7,69 @@
     <link rel="icon" type="image/png" href="img/volei-icon.png">
     <link rel="stylesheet" href="reset.css">
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
 
-        body, html {
+        html, body {
             height: 100%;
             margin: 0;
             display: flex;
+            flex-direction: column;
+            font-family: 'Poppins', sans-serif;
+            color: #333;
+            background-color: #fafafa;
+        }
+
+        header {
+            width: 100%;
+            padding: 10px 20px;
+            background-color: #007bff;
+            color: white;
+            text-align: center;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            position: fixed;
+            top: 0;
+            left: 0;
+            z-index: 1000;
+        }
+
+        header a {
+            color: white;
+            text-decoration: none;
+            font-weight: 600;
+            font-size: 1.2em;
+            display: inline-block;
+            padding: 10px 20px;
+            border-radius: 5px;
+            background-color: #0056b3;
+            transition: background-color 0.3s;
+        }
+
+        header a:hover {
+            background-color: #003d7a;
+        }
+
+        main {
+            flex: 1;
+            width: 90%;
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 80px 20px 20px;
+            display: flex;
             justify-content: center;
-            align-items: center;
-            background-color: #f0f0f0;
-            box-sizing: border-box;
-            font-family: "Poppins", sans-serif;
+            align-items: flex-start;
+            gap: 20px;
         }
 
         .abertura {
-            text-align: center;
-            width: 80%;
-            max-width: 800px;
-            animation: abrirPagina 2s ease-out forwards;
+            width: 60%;
+            animation: abrirPagina 1.5s ease-out forwards;
             opacity: 0;
         }
 
         @keyframes abrirPagina {
             0% {
                 opacity: 0;
-                transform: scale(0.8);
+                transform: scale(0.9);
             }
             100% {
                 opacity: 1;
@@ -40,78 +78,101 @@
         }
 
         h1 {
-            color: #333;
             font-size: 2.5em;
+            color: #222;
             margin-bottom: 0.5em;
         }
 
         p {
-            color: #666;
-            font-size: 1.5em;
-            padding: 0 5%;
+            color: #555;
+            font-size: 1.1em;
+            line-height: 1.6;
             margin-bottom: 1.5em;
         }
 
         .medalhas {
-            text-align: left;
+            background-color: white;
+            border-radius: 8px;
             padding: 20px;
-            font-size: 1.2em;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            text-align: left;
+            font-size: 1.1em;
+            margin: 0 auto;
+            max-width: 700px;
         }
 
         .medalhas h1 {
-            margin-top: 20px;
-            font-size: 2em;
-            color: #333;
+            font-size: 1.8em;
+            color: #007bff;
+            margin-bottom: 0.5em;
         }
 
         .medalhas ul {
             list-style-type: none;
-            padding-left: 0;
+            padding: 0;
+            margin: 0;
         }
 
         .medalhas li {
             margin-bottom: 10px;
+            padding-bottom: 5px;
+            border-bottom: 1px solid #eee;
+        }
+
+        .image-gallery {
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+        }
+
+        .image-gallery img {
+            width: 100%;
+            max-width: 300px;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
 
         footer {
-            position: absolute;
             width: 100%;
-            height: 6em;
-            bottom: 0;
+            background-color: #007bff;
             color: white;
-            background-color: orange;
-            line-height: 1.5em;
-            padding-top: 10px;
-            padding-bottom: 5px;
+            text-align: center;
+            padding: 20px;
             font-size: 0.9em;
+            box-shadow: 0 -4px 6px rgba(0, 0, 0, 0.1);
+        }
+
+        footer h2 {
+            margin: 0;
+            font-size: 1.4em;
+            font-weight: 600;
         }
 
         footer ul {
             list-style: none;
             padding: 0;
-            margin: 0;
+            margin: 10px 0 0;
         }
 
         footer li {
-            padding-left: 20px;
+            margin: 5px 0;
         }
 
-        .plado {
-            margin-left: 2em;
+        footer li b {
+            color: #f0f0f0;
         }
     </style>
 </head>
 <body>
     <header>
-        <a href="index.html"><button>Pagina Inicial</button></a>
+        <a href="index.html">Página Inicial</a>
     </header>
     <main>
         <div class="abertura">
-            <h1>Volei de Quadra!</h1>
+            <h1>Volei de Quadra</h1>
             <p>
                 O voleibol entrou nos Jogos Olímpicos de Paris (1924), porém como esporte demonstrativo. Foi apenas nas
-                Olimpíadas de Tóquio (1964) que ele se tornou um esporte olímpico de competição. - O país que mais
-                ganhou
+                Olimpíadas de Tóquio (1964) que ele se tornou um esporte olímpico de competição. O país que mais ganhou
                 medalhas no voleibol masculino em Jogos Olímpicos foi a extinta União Soviética.
             </p>
             <div class="medalhas">
@@ -134,9 +195,15 @@
                 </ul>
             </div>
         </div>
+        <div class="image-gallery">
+            <img src="img/voleibol1.jpg" alt="Imagem de Voleibol 1">
+            <img src="img/voleibol2.jpg" alt="Imagem de Voleibol 2">
+            <img src="img/voleibol3.jpg" alt="Imagem de Voleibol 3">
+            <img src="img/voleibol4.jpg" alt="Imagem de Voleibol 4">
+        </div>
     </main>
     <footer>
-        <div class="plado">
+        <div>
             <h2>OlimpíadasTec</h2>
             <ul>
                 <li><b>Desenvolvido por:</b> Lucas Balceivcz</li>
