--- a/volei.html
+++ b/volei.html
@@ -60,8 +60,28 @@
             gap: 20px;
         }
 
+        .container {
+            display: flex;
+            width: 100%;
+            justify-content: space-between;
+        }
+
+        .image-gallery {
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+            width: 30%;
+        }
+
+        .image-gallery img {
+            width: 100%;
+            max-width: 300px;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
         .abertura {
-            width: 60%;
+            width: 40%;
             animation: abrirPagina 1.5s ease-out forwards;
             opacity: 0;
         }
@@ -119,19 +139,6 @@
             border-bottom: 1px solid #eee;
         }
 
-        .image-gallery {
-            display: flex;
-            flex-direction: column;
-            gap: 20px;
-        }
-
-        .image-gallery img {
-            width: 100%;
-            max-width: 300px;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-
         footer {
             width: 100%;
             background-color: #007bff;
@@ -168,38 +175,42 @@
         <a href="index.html">Página Inicial</a>
     </header>
     <main>
-        <div class="abertura">
-            <h1>Volei de Quadra</h1>
-            <p>
-                O voleibol entrou nos Jogos Olímpicos de Paris (1924), porém como esporte demonstrativo. Foi apenas nas
-                Olimpíadas de Tóquio (1964) que ele se tornou um esporte olímpico de competição. O país que mais ganhou
-                medalhas no voleibol masculino em Jogos Olímpicos foi a extinta União Soviética.
-            </p>
-            <div class="medalhas">
-                <h1>Voleibol Masculino:</h1>
-                <ul>
-                    <li>União Soviética: 4 vezes (1964, 1968, 1980, 1988)</li>
-                    <li>Brasil: 3 vezes (1992, 2004, 2016)</li>
-                    <li>Estados Unidos: 3 vezes (1984, 1988, 2008)</li>
-                    <li>Iugoslávia: 1 vez (2000)</li>
-                    <li>Polônia: 1 vez (1976)</li>
-                </ul>
-
-                <h1>Voleibol Feminino:</h1>
-                <ul>
-                    <li>Rússia: 2 vezes (1964 como União Soviética, 1980 como União Soviética)</li>
-                    <li>China: 3 vezes (1984, 2004, 2016)</li>
-                    <li>Cuba: 3 vezes (1992, 1996, 2000)</li>
-                    <li>Estados Unidos: 1 vez (2020)</li>
-                    <li>Coreia do Sul: 1 vez (1976)</li>
-                </ul>
+        <div class="container">
+            <div class="image-gallery">
+                <img src="img/voleibol1.jpg" alt="Imagem de Voleibol 1">
+                <img src="img/voleibol2.jpg" alt="Imagem de Voleibol 2">
             </div>
-        </div>
-        <div class="image-gallery">
-            <img src="img/voleibol1.jpg" alt="Imagem de Voleibol 1">
-            <img src="img/voleibol2.jpg" alt="Imagem de Voleibol 2">
-            <img src="img/voleibol3.jpg" alt="Imagem de Voleibol 3">
-            <img src="img/voleibol4.jpg" alt="Imagem de Voleibol 4">
+            <div class="abertura">
+                <h1>Volei de Quadra</h1>
+                <p>
+                    O voleibol entrou nos Jogos Olímpicos de Paris (1924), porém como esporte demonstrativo. Foi apenas nas
+                    Olimpíadas de Tóquio (1964) que ele se tornou um esporte olímpico de competição. O país que mais ganhou
+                    medalhas no voleibol masculino em Jogos Olímpicos foi a extinta União Soviética.
+                </p>
+                <div class="medalhas">
+                    <h1>Voleibol Masculino:</h1>
+                    <ul>
+                        <li>União Soviética: 4 vezes (1964, 1968, 1980, 1988)</li>
+                        <li>Brasil: 3 vezes (1992, 2004, 2016)</li>
+                        <li>Estados Unidos: 3 vezes (1984, 1988, 2008)</li>
+                        <li>Iugoslávia: 1 vez (2000)</li>
+                        <li>Polônia: 1 vez (1976)</li>
+                    </ul>
+
+                    <h1>Voleibol Feminino:</h1>
+                    <ul>
+                        <li>Rússia: 2 vezes (1964 como União Soviética, 1980 como União Soviética)</li>
+                        <li>China: 3 vezes (1984, 2004, 2016)</li>
+                        <li>Cuba: 3 vezes (1992, 1996, 2000)</li>
+                        <li>Estados Unidos: 1 vez (2020)</li>
+                        <li>Coreia do Sul: 1 vez (1976)</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="image-gallery">
+                <img src="img/voleibol3.jpg" alt="Imagem de Voleibol 3">
+                <img src="img/voleibol4.jpg" alt="Imagem de Voleibol 4">
+            </div>
         </div>
     </main>
     <footer>
